fixed a bug that wouldn't allow canvas' to overlap

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ details {
 	margin:0px;
 	padding:0px;
 	top: 0px;
+    left: 0px;
 }
 
 #game {
